refactor(jdk-migration): Migrate to JDK 25 features